feat: rate limiting for sending email has been implemented
